--- a/.github/workflows/publish-flotte-gbfs.yml
+++ b/.github/workflows/publish-flotte-gbfs.yml
@@ -12,20 +12,20 @@ jobs:
     - uses: actions/checkout@v2
     - uses: docker/login-action@v1
       with:
-        registry: registry.gitlab.tpwd.de
-        username: ${{ secrets.GITLAB_USERNAME }}
-        password: ${{ secrets.GITLAB_PASSWORD }}
+        registry: ghcr.io
+        username: ${{ secrets.GITHUB_USERNAME }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     - name: build commonsbooking2gbfs Docker image
       uses: docker/build-push-action@v2
       with:
         context: .
-        tags: commonsbooking2gbfs
+        tags: ghcr.io/bbnavi/commonsbooking2gbfs
     - name: build publish-flotte-gbfs Docker image
       uses: docker/build-push-action@v4
       with:
         context: publish-flotte-gbfs
         load: true
-        tags: registry.gitlab.tpwd.de/tpwd/bb-navi/publish-flotte-gbfs
+        tags: ghcr.io/bbnavi/publish-flotte-gbfs
 
     - name: set up temporary local minIO instance
       run: |
@@ -54,31 +54,31 @@ jobs:
           /bin/sh publish.sh bbnavi/flotte
 
     # https://twitter.com/derhuerst/status/1511660213111336961
-    - name: inline env vars to work around quantum-cli support
-      env:
-        MINIO_ACCESS_KEY: "${{ secrets.MINIO_ACCESS_KEY }}"
-        MINIO_SECRET_KEY: "${{ secrets.MINIO_SECRET_KEY }}"
-      run: |
-        cd publish-flotte-gbfs
-        sudo apt install -y moreutils
-        docker-compose -f quantum-stack.yml config | sponge quantum-stack.yml
+    # - name: inline env vars to work around quantum-cli support
+    #   env:
+    #     MINIO_ACCESS_KEY: "${{ secrets.MINIO_ACCESS_KEY }}"
+    #     MINIO_SECRET_KEY: "${{ secrets.MINIO_SECRET_KEY }}"
+    #   run: |
+    #     cd publish-flotte-gbfs
+    #     sudo apt install -y moreutils
+    #     docker-compose -f quantum-stack.yml config | sponge quantum-stack.yml
 
-    - name: publish publish-flotte-gbfs Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: publish-flotte-gbfs
-        push: true
-        tags: registry.gitlab.tpwd.de/tpwd/bb-navi/publish-flotte-gbfs
-    - name: deploy to bbnavi infrastructure
-      env:
-        QUANTUM_USER: "${{ secrets.QUANTUM_USER }}"
-        QUANTUM_PASSWORD: "${{ secrets.QUANTUM_PASSWORD }}"
-        QUANTUM_ENDPOINT: "tpwd-bb-navi"
-        QUANTUM_STACK: "publish-flotte-gbfs-tpwd-bb-navi"
-      run: |
-        cd publish-flotte-gbfs
-        docker run --rm -i \
-          -v $PWD:/app -w /app \
-          -e QUANTUM_USER -e QUANTUM_PASSWORD -e QUANTUM_ENDPOINT -e QUANTUM_STACK \
-          r.planetary-quantum.com/quantum-public/cli:2 \
-          quantum-cli stacks update --create --wait
+    # - name: publish publish-flotte-gbfs Docker image
+    #   uses: docker/build-push-action@v4
+    #   with:
+    #     context: publish-flotte-gbfs
+    #     push: true
+    #     tags: registry.gitlab.tpwd.de/tpwd/bb-navi/publish-flotte-gbfs
+    # - name: deploy to bbnavi infrastructure
+    #   env:
+    #     QUANTUM_USER: "${{ secrets.QUANTUM_USER }}"
+    #     QUANTUM_PASSWORD: "${{ secrets.QUANTUM_PASSWORD }}"
+    #     QUANTUM_ENDPOINT: "tpwd-bb-navi"
+    #     QUANTUM_STACK: "publish-flotte-gbfs-tpwd-bb-navi"
+    #   run: |
+    #     cd publish-flotte-gbfs
+    #     docker run --rm -i \
+    #       -v $PWD:/app -w /app \
+    #       -e QUANTUM_USER -e QUANTUM_PASSWORD -e QUANTUM_ENDPOINT -e QUANTUM_STACK \
+    #       r.planetary-quantum.com/quantum-public/cli:2 \
+    #       quantum-cli stacks update --create --wait
