--- a/.github/workflows/publish-flotte-gbfs.yml
+++ b/.github/workflows/publish-flotte-gbfs.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: docker/login-action@v1
       with:
         registry: ghcr.io
-        username: ${{ secrets.GITHUB_USERNAME }}
+        username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: build commonsbooking2gbfs Docker image
       uses: docker/build-push-action@v2
