--- a/.github/workflows/publish-flotte-gbfs.yml
+++ b/.github/workflows/publish-flotte-gbfs.yml
@@ -65,4 +65,4 @@ jobs:
       - uses: actions/checkout@v2
       - name: Deploy Stack
         run: |
-          docker stack deploy --compose-file ./docker-compose.yml commonsbooking2gbfs
+          docker stack deploy --compose-file ./publish-flotte-gbfs/docker-compose.yml commonsbooking2gbfs
