--- a/publish-flotte-gbfs/docker-compose.yml
+++ b/publish-flotte-gbfs/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   publish-flotte-gbfs:
     image: ghcr.io/bbnavi/publish-flotte-gbfs
     environment:
-      MINIO_ACCESS_KEY: "${{ secrets.OPENDATA_KEY }}"
-      MINIO_SECRET_KEY: "${{ secrets.OPENDATA_SECRET }}"
+      - MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY:?missing env var MINIO_ACCESS_KEY}
+      - MINIO_SECRET_KEY=${MINIO_SECRET_KEY:?missing env var MINIO_SECRET_KEY}
     deploy:
       replicas: 1
       placement:
