--- a/.github/workflows/publish-flotte-gbfs.yml
+++ b/.github/workflows/publish-flotte-gbfs.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build-test-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
     - uses: actions/checkout@v2
     - uses: docker/login-action@v1
@@ -20,19 +23,13 @@ jobs:
       with:
         context: .
         tags: ghcr.io/bbnavi/commonsbooking2gbfs
-    - name: Extract metadata (tags, labels) for Docker
-      id: meta
-      uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
+    
     - name: build publish-flotte-gbfs Docker image
       uses: docker/build-push-action@v4
       with:
-        context: publish-barshare-gbfs
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
+        context: publish-flotte-gbfs
+        load: true
+        tags: ghcr.io/bbnavi/publish-flotte-gbfs
 
     - name: set up temporary local minIO instance
       run: |
@@ -57,7 +54,7 @@ jobs:
           --network test -e 'MC_HOST_bbnavi=http://some-user:some-password@minio:9000' \
           -e GBFS_TMP_DIR=/tmp/gbfs \
           -e MINIO_ACCESS_KEY=foo -e MINIO_SECRET_KEY=bar \
-          ghcr.io/bbnavi/publish-flotte-gbfs:main \
+          ghcr.io/bbnavi/publish-flotte-gbfs \
           /bin/sh publish.sh bbnavi/flotte
 
   deploy:
